<resources>
    <string name="app_name">HM2</string>
    <string name="activity_login">Activity logIn</string>
    <string name="activity_register">Activity register</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login_template2">LoginTemplate2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello">Hello</string>
    <string name="noemi">Noemi</string>
    <string name="search_elements">Search elements</string>
    <string name="personal_information">Personal information</string>
    <string name="personal_info">Personal Info</string>
    <string name="resources">resources</string>
    <string name="resources2">Resources</string>
    <string name="survey">Survey</string>
    <string name="results">Results</string>
    <string name="quote_motivation">DON\'T FORGET</string>
    <string name="quoteJohn">“There is hope, even when your brain tells you there isn’t.” — John Green</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="get_started">GET STARTED!</string>
    <string name="you_are_valid">You are valid</string>
    <string name="tell_us_how_you_feel">Tell us how you feel</string>
    <string name="you_are_not_alone">You are NOT alone</string>
    <string name="full_name">Full Name</string>
    <string name="name">Name</string>
</resources>